--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
     --primary-bg-color: #f4f4f4; 
 }
 * {
-    margin: 500;
-    padding: 500;
+    margin: 0;
 }
 main {
     display: grid;
@@ -59,10 +58,10 @@ ul:has(li) {
     border: 1px solid rgb(230, 236, 226);
  }
 h2{
-    background-color: color-mix(in srgb, rgb(235, 238, 240) 50%, navy 50%);;
-    color: color(display-p3 1 0 0 / 0.8);
+    color: color-mix(in srgb, red 50%, blue 50%);
+    background-color: color(srgb 0.4 0.5 0.6 / 0.75);
     border: 3px dashed red; /* Shorthand border */
-    margin: 20px 50 px; 
+    margin: 20px 50px; 
 }
 h3{
     padding-top: 10px;
